freshed-rs-macros/tests/ui/fail/html_async_trailing_garbage.rs
use freshed_rs_macros::html_async;

fn main() {
    let _ = html_async!(<div>ok</div>,);
}
